--- a/demo-shell/src/app/components/app-layout/cloud/task-details-cloud-demo.component.html
+++ b/demo-shell/src/app/components/app-layout/cloud/task-details-cloud-demo.component.html
@@ -5,6 +5,12 @@
         <button mat-button (click)="goBack()">Cancel</button>
         <button mat-button color="primary" *ngIf="canCompleteTask()" adf-cloud-complete-task [appName]="appName" [taskId]="taskId"
             (success)="onCompletedTask($event)">{{ 'ADF_TASK_LIST.DETAILS.BUTTON.COMPLETE' | translate }}</button>
+
+        <button mat-button color="primary" *ngIf="canClaimTask()" adf-cloud-claim-task [appName]="appName" [taskId]="taskId"
+        (success)="onClaimTask($event)">{{ 'ADF_TASK_LIST.DETAILS.BUTTON.CLAIM' | translate }}</button>
+
+        <button mat-button color="primary" *ngIf="canUnClaimTask()" adf-cloud-unclaim-task [appName]="appName" [taskId]="taskId"
+        (success)="onUnclaimTask($event)">{{ 'ADF_TASK_LIST.DETAILS.BUTTON.UNCLAIM' | translate }}</button>
     </div>
 
     <adf-cloud-task-header class="adf-demop-card-container" [appName]="appName" [taskId]="taskId" [readOnly]="readOnly">
